RESOLVED FIXED201502
AX: children cache are not re-computed if tab index is removed
https://bugs.webkit.org/show_bug.cgi?id=201502
Summary AX: children cache are not re-computed if tab index is removed
chris fleizach
Reported 2019-09-05 00:51:03 PDT
If an element has a tab index, then it's marked as accessible. If it's then subsequently removed, we do not update the children, and parent/child hierarchy is stale - leading to navigation issues with VO <rdar://problem/54922410>
Attachments
patch (4.64 KB, patch)
2019-09-05 01:10 PDT, chris fleizach
zalan: review+
patch (4.58 KB, patch)
2019-09-05 01:11 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2019-09-05 01:10:26 PDT
chris fleizach
Comment 2 2019-09-05 01:11:25 PDT
WebKit Commit Bot
Comment 3 2019-09-05 10:27:20 PDT
Comment on attachment 378059 [details] patch Clearing flags on attachment: 378059 Committed r249534: <https://trac.webkit.org/changeset/249534>
WebKit Commit Bot
Comment 4 2019-09-05 10:27:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.