Cherry-pick r249534. rdar://problem/55183098

AX: children cache are not re-computed if tab index is removed
    https://bugs.webkit.org/show_bug.cgi?id=201502

    Reviewed by Zalan Bujtas.

    Source/WebCore:

    Test: accessibility/tabindex-removed.html

    If the tabindex changes, it can potentially affect whether an element is accessible. If we don't update the children cache
    information can be stale and lead to incorrect navigation with VoiceOver.

    * accessibility/AXObjectCache.cpp:
    (WebCore::AXObjectCache::handleAttributeChange):

    LayoutTests:

    * accessibility/tabindex-removed-expected.txt: Added.
    * accessibility/tabindex-removed.html: Added.

    Canonical link: https://commits.webkit.org/215138@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249534 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.338@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@249694 268f45cc-cd09-0410-ab3c-d52691b4dbfc